curate tag list

--- a/best_rides/.lesson.yml
+++ b/best_rides/.lesson.yml
@@ -2,7 +2,7 @@
 title: "Favorite Rides"
 type: "exercise"
 description: "Use input and output to share your favorite rides with friends"
-tags: "input/output"
+tags: "io"
 visibility: "subscribe"
 ignore:
 - "best_rides.md"
