--- a/speaking_engagements/.lesson.yml
+++ b/speaking_engagements/.lesson.yml
@@ -3,7 +3,7 @@ title: "Speaking Engagements"
 type: "challenge"
 visibility: "subscribe"
 description: "Use 2 dimensional array to manage a speaking schedule"
-tags: "arrays, hashes, compound data structures"
+tags: "arrays, hashes, compound-data-structures"
 ---
 
 
