--- a/build_a_calculator/.lesson.yml
+++ b/build_a_calculator/.lesson.yml
@@ -1,6 +1,6 @@
 ---
 title: "Build a Calculator"
 type: "challenge"
-visibility: "subscribe"
+visibility: "public"
 description: "Write a program that automates basic arithmetic"
 ---
