--- a/speaking_engagements/.lesson.yml
+++ b/speaking_engagements/.lesson.yml
@@ -1,7 +1,7 @@
 ---
 title: "Speaking Engagements"
 type: "challenge"
-visibility: "subscribe"
+visibility: "public"
 description: "Use 2 dimensional array to manage a speaking schedule"
 tags: "arrays, hashes, compound-data-structures"
 ---
