--- a/the_runner/.lesson.yml
+++ b/the_runner/.lesson.yml
@@ -1,6 +1,6 @@
 ---
 title: "The Runner"
 type: "challenge"
-visibility: "subscribe"
+visibility: "public"
 description: "Write a program that helps you with your marathon training program"
 ---
