--- a/in-theaters/.lesson.yml
+++ b/in-theaters/.lesson.yml
@@ -2,7 +2,7 @@
 title: "In Theaters Now"
 type: "challenge"
 description: "Parse JSON data to list the movies currently in theaters."
-depends: "word-counter"
+tags: "json, ruby"
 ignore:
 - "in-theaters.md"
 - "in_theaters.json"
