--- a/validations/.lesson.yml
+++ b/validations/.lesson.yml
@@ -2,5 +2,6 @@
 title: "Validations"
 type: "exercise"
 description: "Regular Expression Drills"
+tags: "regular-expressions"
 ignore:
 - "validations.md"
